--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -14,15 +14,15 @@ on:
       DEVICE_TREE_URL:
         description: 'DEVICE_TREE_URL'
         required: true
-        default: 'https://github.com/lenovo-sm8250-devs/recovery_device_moba'
+        default: 'https://github.com/taotaoS2/twrp_motorola_devon'
       DEVICE_TREE_BRANCH:
         description: 'DEVICE_TREE_BRANCH'
         required: true
-        default: 'fox-12.1'
+        default: 'ofox_12.1'
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/lenovo/moba'
+        default: 'device/motorola/devon'
       COMMON_TREE_URL:
         description: 'COMMON_TREE_URL (if no common tree, leave blank)'
         required: false
@@ -32,11 +32,11 @@ on:
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'moba'
+        default: 'devon'
       MAKEFILE_NAME:
         description: 'MAKEFILE_NAME'
         required: true
-        default: 'twrp_moba'
+        default: 'twrp_devon'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
